# job-radar

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-start.sh  docker-stop.sh  pyproject.toml  requirements.txt
.github/workflows/: job-scan.yml  test.yml
config/: profile.yaml.example  settings.py
dashboard/: __init__.py  app.py  common.py
dashboard/components/: __init__.py  charts.py  job_card.py
dashboard/pages/: 0_setup.py  1_jobs.py  2_applications.py  3_pipeline.py  4_analytics.py  5_rejection_analysis.py  6_settings.py
docs/: ARCHITECTURE.md  SETUP_GUIDE.md
launchd/: com.jobradar.plist.example
scripts/: backfill_descriptions.py  backfill_job_descriptions.py  bootstrap.py  cleanup_orphaned_records.py  fix_audit_issues.py  fix_data_quality.py  fix_rejection_data.py  import_historical.py  install_launchd.sh  migrate_sqlite_to_postgres.py  migrate_statuses.py  relink_applications.py  reprocess_emails.py  run_scan.py  setup_gmail.py  setup_slack.py  validate_before_migration.py
src/: __init__.py  logging_config.py  main.py
src/analytics/: __init__.py  funnel.py  rejection_analysis.py  resume_analysis.py  source_analysis.py
src/auth/: __init__.py  exceptions.py  rate_limit.py  service.py
src/collectors/: __init__.py  (+19 more)
tests/: __init__.py  conftest.py  test_analytics.py  test_audit_fixes.py  test_collectors.py  test_compliant_collectors.py  test_gmail.py  test_infrastructure.py  test_matching.py  test_models.py  test_onboarding.py  test_services.py
(+31 files in other folders)
