[project]
name = "job-radar"
version = "1.0.0"
description = "Job Radar + Application Tracker - Real-time job monitoring and application tracking system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core
    "python-jobspy>=1.1.82",
    "aiohttp>=3.9",
    "sqlalchemy>=2.0",
    "apscheduler>=3.10",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",

    # Notifications
    "slack-sdk>=3.0",

    # Gmail
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.0",

    # Dashboard
    "streamlit>=1.30",
    "plotly>=5.18",
    "pandas>=2.0",

    # Scraping
    "beautifulsoup4>=4.12",
    "feedparser>=6.0",

    # Utilities
    "pyyaml>=6.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[project.scripts]
job-radar = "src.main:main"
job-dashboard = "dashboard.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "dashboard"]
